[gd_scene load_steps=11 format=2]

[ext_resource path="res://Stuff/Player.gd" type="Script" id=1]
[ext_resource path="res://Characters/Adventurer/Poses/adventurer_idle.png" type="Texture" id=2]
[ext_resource path="res://Characters/Adventurer/Poses/adventurer_fall.png" type="Texture" id=3]
[ext_resource path="res://Characters/Adventurer/Poses/adventurer_walk1.png" type="Texture" id=4]
[ext_resource path="res://Characters/Adventurer/Poses/adventurer_walk2.png" type="Texture" id=5]
[ext_resource path="res://Characters/Adventurer/Poses/adventurer_jump.png" type="Texture" id=6]
[ext_resource path="res://Backgrounds/Backgrounds/backgroundColorGrass.png" type="Texture" id=7]
[ext_resource path="res://Stuff/Pause.gd" type="Script" id=8]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 2 ) ],
"loop": true,
"name": "idle",
"speed": 5.01
}, {
"frames": [ ExtResource( 3 ) ],
"loop": true,
"name": "fall",
"speed": 5.0
}, {
"frames": [ ExtResource( 4 ), ExtResource( 5 ) ],
"loop": true,
"name": "walk",
"speed": 7.0
}, {
"frames": [ ExtResource( 6 ) ],
"loop": true,
"name": "jump",
"speed": 5.0
} ]

[sub_resource type="CapsuleShape2D" id=2]
radius = 30.1596
height = 26.5551

[node name="Player" type="KinematicBody2D"]
position = Vector2( 64, 64 )
script = ExtResource( 1 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 1 )
animation = "idle"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
position = Vector2( 1.84038, 11.4372 )
shape = SubResource( 2 )

[node name="Camera2D" type="Camera2D" parent="."]
current = true
smoothing_enabled = true

[node name="ParallaxBackground" type="ParallaxBackground" parent="."]
editor/display_folded = true

[node name="Sprite" type="Sprite" parent="ParallaxBackground"]
position = Vector2( 0, -320 )
texture = ExtResource( 7 )
centered = false

[node name="Pause Menu" type="CanvasLayer" parent="."]
layer = 100

[node name="Pause" type="Control" parent="Pause Menu"]
pause_mode = 2
modulate = Color( 0, 0.835294, 1, 1 )
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 8 )

[node name="CenterContainer" type="CenterContainer" parent="Pause Menu/Pause"]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="VBoxContainer" type="VBoxContainer" parent="Pause Menu/Pause/CenterContainer"]
margin_left = 439.0
margin_top = 257.0
margin_right = 585.0
margin_bottom = 343.0

[node name="Paused" type="Label" parent="Pause Menu/Pause/CenterContainer/VBoxContainer"]
modulate = Color( 0, 0, 0, 1 )
margin_right = 146.0
margin_bottom = 14.0
text = "Paused"
align = 1

[node name="Resume" type="Button" parent="Pause Menu/Pause/CenterContainer/VBoxContainer"]
margin_top = 18.0
margin_right = 146.0
margin_bottom = 38.0
text = "Resume"

[node name="Return" type="Button" parent="Pause Menu/Pause/CenterContainer/VBoxContainer"]
margin_top = 42.0
margin_right = 146.0
margin_bottom = 62.0
text = "Return to Main Menu"

[node name="Quit" type="Button" parent="Pause Menu/Pause/CenterContainer/VBoxContainer"]
margin_top = 66.0
margin_right = 146.0
margin_bottom = 86.0
text = "Quit Game"

[connection signal="pressed" from="Pause Menu/Pause/CenterContainer/VBoxContainer/Resume" to="Pause Menu/Pause" method="_on_Resume_pressed"]
[connection signal="pressed" from="Pause Menu/Pause/CenterContainer/VBoxContainer/Return" to="Pause Menu/Pause" method="_on_Return_pressed"]
[connection signal="pressed" from="Pause Menu/Pause/CenterContainer/VBoxContainer/Quit" to="Pause Menu/Pause" method="_on_Quit_Game_pressed"]
